fix: home page on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,3 +24,9 @@ footer {
 summary {
   cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+  .post-list-item {
+    flex-direction: column;
+  }
+}
